--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 # A redirect rule with many of the supported properties
 [[redirects]]
   from = "/denver-love"
-  to = "/denver-love/index.html"
+  to = "/denver-love/denver-love.html"
